# WeedlyWeb_SimpleBrowser

./: .gitignore  CMakeLists.txt  browser.cpp  browserwindow.cpp  browserwindow.h  commandwidget.cpp  commandwidget.h  cveanalyzer.cpp  cveanalyzer.h  downloadwidget.cpp  favorites.json  favoritesmanager.cpp  favoritesmanager.h  main.cpp  requestinterceptor.h  simplebrowser.pro  tabwidget.cpp  tabwidget.h  webpage.cpp  webview.cpp  webview.h
doc/src/: simplebrowser.qdoc
src/: main.cpp
src/browser/: browser.cpp  browser.h  browserwindow.cpp  browserwindow.h  certificateerrordialog.cpp  certificateerrordialog.h  passworddialog.cpp  passworddialog.h  tabwidget.cpp  tabwidget.h  webauthdialog.cpp  webauthdialog.h  webpage.cpp  webpage.h  webpopupwindow.cpp  webpopupwindow.h  webview.cpp  webview.h
src/database/: database.cpp  database.h
src/downloads/: downloadmanagerwidget.cpp  downloadmanagerwidget.h  downloadwidget.cpp  downloadwidget.h
src/favorites/: favoriteitem.h  favoritescache.h  favoritesmanager.cpp  favoritesmanager.h
src/utils/: commandpalette.cpp  commandpalette.h  cveanalyzer.cpp  requestinterceptor.cpp
